# svg2gakko

./: .gitignore  README.md  main.py  pyproject.toml
src/svg2gakko/: answer.py  builder.py  cli.py  constants.py  errors.py  file.py  input_parser.py  json_builder.py  parser.py  processor.py  question.py  scanner.py
tests/: test_constants.py  test_dataclass.py  test_input_parser.py  test_json_builder.py  test_parser.py  test_scanner.py
