[project]
name = "svg2gakko"
version = "0.1.0"
description = "Tool for conversion svg images to Gakko's JSON test format"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cairosvg>=2.8.2",
    "pillow>=12.1.1",
    "rich>=14.3.3",
]

[project.scripts]
svg2gakko = "svg2gakko.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
